[35:2.4.3]
- Fixed bug where IPEGA d-pad was being ignored
- Allow app to be seen in Google Play for touchscreen-less devices (e.g. M.O.J.O)
[34:2.4.2]
- Doom 64 is now playable, thanks to ptitSeb of OpenPandora fame
- Fixed audio latency on most devices (see Audio menu)
- Fixed gles2rice missing heart bug for Zelda games
- Fixed cheat menu regression
- Fixed controller buttons not staying pressed (you MUST reset button mappings)
- Fixed help popup bug
- Devs and expert users can modify more settings in the config files (not generally useful for most users)
[33:2.4.1]
- Fixed hi-res texture regression with gles2rice
- Added customizable flicker-reduction profile (for fixing shadow glitches)
[32:2.4.0]
- Major fixes to gles2rice by Gillou68310
- Fixed black textures with gles2rice
- Fixed multitexturing issues with gles2rice (for example, logo on shield in Zelda OOT)
- Fixed bug with gles2rice where fences in Zelda MM are rendered without transparency
- Fixed some messed up textures in gles2rice (for example the horse in Zelda)
- A HUGE THANK YOU to Squarepusher (aka twinaphex) of RetroArch fame for all of the other fixes in this revision!
- Fixed crashes in Perfect Dark, completely playable now
- Fixed green rooms in Zelda OOT when using gles2n64 video plugin
- Fixed gles2n64 black screens (Turok series, Banjo Kazooie HUD, Waverace intermissions, and more)
[31:2.3.5]
- Added 'crop' setting for video scaling (useful for widescreen games)
- Added Greek translation
- Devs and expert users can modify the config files directly (not generally useful for most users)
- Updated SDL to version 2.0.0-release
[30:2.3.4]
- Fixed auto-frameskip regression in gles2n64 video plugin
[29:2.3.3]
- Fixed input/player mapping with the OUYA controller (broken by last OUYA firmware update)
- Removed OUYA controller deadzone hack (improves analog precision on retail controllers)
- Game ROMS can be launched directly from file manager apps
[28:2.3.2]