@@ -1,3 +1,5 @@
+[36:2.4.4]
+- Fixed analog mappings for PS4 controller
 [35:2.4.3]
 - Fixed bug where IPEGA d-pad was being ignored
 - Allow app to be seen in Google Play for touchscreen-less devices (e.g. M.O.J.O)
